--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
-ul li {
-  list-style-type: georgian;
+.app-wrapper {
+  margin: 0 auto;
+
+  display: grid;
+
+  width: 1200px;
+
+  grid-template-areas: 
+    "h h"
+    "n c";
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  gap: 10px;
+}
+
+.header {
+  grid-area: h;
+  background-color:aquamarine;
+}
+
+.header img {
+  width: 50px;
+}
+
+.nav {
+  grid-area: n;
+  background-color:aqua;
+}
+
+.content {
+  grid-area: c;
+  background-color:bisque;
+}
+.content img {
+  width: 50%;
 }
