--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,9 +2,9 @@
   grid-area: n;
   background-color:aqua;
 }
-.item {
+.item a {
     color:white;
 }
-.item.active {
+.item a.activeLink {
   color: gold;
 }
