--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
     "n c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .app-wrapper-content {
