--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,11 @@
 .nav {
   grid-area: n;
   background-color:aqua;
+  padding: 20px;
 }
 .item a {
     color:white;
+    text-decoration:none;
 }
 .item a.activeLink {
   color: gold;
