--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,12 +1,16 @@
 .dialogs {
+    display: grid;
+    grid-template-columns: 2fr 10fr;
+}
 
+.dialogsItems {
+    padding: 10px;
 }
-.dialogs .dialog {
-    
+
+.messages {
+    padding: 10px;
 }
+
 .messages .message{
-
-}
-.message {
-
+    
 }
