--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -5,6 +5,7 @@
 
 .dialogsItems {
     padding: 10px;
+    color: white;
 }
 .dialogsItems .active {
     color: green;
@@ -15,5 +16,5 @@
 }
 
 .messages .message{
-    
+    color: violet;
 }
